--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+drools-spring-kjar/.classpath
+drools-spring-kjar/.settings/org.hibernate.eclipse.console.prefs
+drools-spring-kjar/target/.gitignore
+drools-spring-kjar/target/classes/META-INF/MANIFEST.MF
+drools-spring-kjar/target/classes/META-INF/maven/sbnz.integracija/drools-spring-kjar/pom.properties
+the-perfect-meal-SB/the-perfect-meal/src/main/java/META-INF/MANIFEST.MF
