--- a/the-perfect-meal-SB/the-perfect-meal/src/main/resources/application.properties
+++ b/the-perfect-meal-SB/the-perfect-meal/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/the_perfect_meal
 
+spring.datasource.username=kts
+spring.datasource.password=kts.nvt17
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.port = ${PORT:8080}
