--- a/the-perfect-meal-SB/the-perfect-meal/pom.xml
+++ b/the-perfect-meal-SB/the-perfect-meal/pom.xml
@@ -79,6 +79,11 @@
 	  		<type>jar</type>
 	  		<version>0.0.1-SNAPSHOT</version>
   		</dependency>
+  		<dependency>
+			<groupId>org.apache.maven.shared</groupId>
+			<artifactId>maven-invoker</artifactId>
+			<version>3.1.0</version>
+		</dependency>
         </dependencies>
 	<properties>
         <java.version>1.8</java.version>
