--- a/the-perfect-spot-FE/package.json
+++ b/the-perfect-spot-FE/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@ng-select/ng-select": "^7.0.0",
+    "ng-multiselect-dropdown": "^0.3.4",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.7",
     "tslib": "^2.0.0",
