--- a/the-perfect-spot-FE/package.json
+++ b/the-perfect-spot-FE/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "~11.0.1",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.0.1",
@@ -22,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@ng-select/ng-select": "^7.0.0",
+    "@angular/google-maps": "^11.0.0",
     "ng-multiselect-dropdown": "^0.3.4",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.7",
@@ -45,6 +47,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "@types/googlemaps": "3.39.14"
   }
 }
