--- a/the-perfect-spot-FE/package.json
+++ b/the-perfect-spot-FE/package.json
@@ -18,12 +18,12 @@
     "@angular/compiler": "~11.0.1",
     "@angular/core": "~11.0.1",
     "@angular/forms": "~11.0.1",
+    "@angular/google-maps": "^11.0.0",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@ng-select/ng-select": "^7.0.0",
-    "@angular/google-maps": "^11.0.0",
     "ng-multiselect-dropdown": "^0.3.4",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.7",
@@ -34,6 +34,7 @@
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
+    "@types/googlemaps": "^3.39.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -47,7 +48,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "@types/googlemaps": "3.39.14"
+    "typescript": "~4.0.2"
   }
 }
